// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell - Snapshot should render CellDisplay given the type Display 1`] = `
<CellDisplay
  avatarProps={
    Object {
      "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
      "type": "JazzIcon",
      "variant": "Account",
    }
  }
  secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
  tagLabel="Imported"
  tertiaryText="Updated 1 sec ago"
  testID="celldisplay"
  title="Orangefox.eth"
/>
`;

exports[`Cell - Snapshot should render CellMultiSelect given the type MultiSelect 1`] = `
<CellMultiSelect
  avatarProps={
    Object {
      "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
      "type": "JazzIcon",
      "variant": "Account",
    }
  }
  secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
  tagLabel="Imported"
  tertiaryText="Updated 1 sec ago"
  testID="cellmultiselect"
  title="Orangefox.eth"
/>
`;

exports[`Cell - Snapshot should render CellSelect given the type Select 1`] = `
<CellSelect
  avatarProps={
    Object {
      "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
      "type": "JazzIcon",
      "variant": "Account",
    }
  }
  secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
  tagLabel="Imported"
  tertiaryText="Updated 1 sec ago"
  testID="cellselect"
  title="Orangefox.eth"
/>
`;
